--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "puppeteer": "^1.17.0",
     "rss-parser": "^3.7.1"
   }
