--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "puppeteer": "^1.17.0",
     "rss-parser": "^3.7.1"
   }
