--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express-basic-auth": "^1.2.0",
     "puppeteer": "^1.17.0",
     "rss-parser": "^3.7.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
