--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "puppeter-example",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
+    "start": "node dist/main.js",
+    "build": "tsc",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +19,11 @@
     "rss-parser": "^3.7.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.0",
+    "@types/puppeteer": "^1.12.4",
+    "eslint": "^5.16.0",
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.1"
   }
 }
