--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/express": "^4.17.0",
     "@types/puppeteer": "^1.12.4",
     "eslint": "^5.16.0",
+    "prettier": "^1.18.2",
     "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.1"
   }
 }
