--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ws": "^6.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "puppeteer": "^1.17.0",
-    "rss-parser": "^3.7.1"
+    "rss-parser": "^3.7.1",
+    "ws": "^7.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
@@ -27,5 +29,9 @@
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.1"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.1",
+    "utf-8-validate": "^5.0.2"
   }
 }
