--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/main.js",
     "build": "tsc",
+    "dev": "tsc && npm start",
     "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "generate-password": "^1.4.2",
     "puppeteer": "^1.17.0",
     "rss-parser": "^3.7.1",
     "ws": "^7.0.1"
