--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.6.3",
     "@types/ws": "^6.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
